2000-09-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-edit.el (mime-file-types): Fix to use application/msword
	instead of application/winword.

2000-08-04   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Don't bind
	coding-system-for-read.

2000-07-21  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.8 is released.

2000-07-11  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-pgp.el (mime-view-application/pgp): Setup local variable
	`mime-view-temp-message-buffer' of preview-buffer.
	(mime-view-application/pkcs7-mime): Likewise.

	* mime-play.el
	(mime-preview-quitting-method-for-mime-show-message-mode): Don't
	use `mime-entity-buffer'; refer `mime-view-temp-message-buffer'.
	(mime-store-message/partial-piece): Use
	`insert-file-contents-as-binary' instead of
	`(as-binary-input-file (insert-file-contents ...))'; use
	`write-region-as-binary' instead of
	`(as-binary-output-file (write-region ...)); setup local variable
	`mime-view-temp-message-buffer' of preview-buffer.

2000-07-08  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-text/plain): Make it a little
	bit more robust to errors.

2000-07-05  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-mode): Remove reference to emacsen
	without MULE.

2000-07-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* mime-image.el (mime-image-insert) [XEmacs]:
	Insert `string' only if it is non-nil.

2000-07-03  Yuuichi Teranishi  <teranisi@gohome.org>

	* mime-edit.el (mime-edit-preview-message): Set up local variable
	`mime-edit-temp-message-buffer'.
	(mime-edit-quitting-method): Refer `mime-edit-temp-message-buffer'
	to avoid to use `mime-entity-buffer'.
	(Synch with latest remi-1_14)
	(mime-edit-temp-message-buffer): Defined.

2000-06-27   Daiki Ueno  <ueno@unixuser.org>

	* mime-image.el (mime-image-insert): Synch with the latest image.el.
	(mime-display-image): Don't pass underlying string "x".
